docs/yaml/03-deployment.yaml
# Copyright 2017-present SIGHUP s.r.l
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gangplank
  namespace: gangplank
  labels:
    app: gangplank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gangplank
  strategy:
  template:
    metadata:
      labels:
        app: gangplank
        revision: "1"
    spec:
      containers:
        - name: gangplank
          image: gcr.io/heptio-images/gangplank:v3.2.0
          imagePullPolicy: Always
          command: ["gangplank", "-config", "/gangplank/gangplank.yaml"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
          volumeMounts:
            - name: gangplank
              mountPath: /gangplank/
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 60
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
      volumes:
        - name: gangplank
          configMap:
            name: gangplank
